--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,7 @@ limitations under the License.
     <nav>
       <ul id="navigation">
         <li><a href="/">Home</a></li>
+	<li><a href=about.html>About</a></li>
       </ul>
     </nav>
     <h1>CodeU Starter Project</h1>
@@ -34,5 +35,7 @@ limitations under the License.
     their URL.</p>
     <p>This is your code now! Feel free to make changes, and don't be afraid to get creative!
     You could start by modifying this page to tell the world more about your team.</p>
+    <p>Oscar: big <b>YEET</b>
+   </p>
   </body>
 </html>
