about me cintia

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -13,8 +13,8 @@
     </nav>
     <h1>About Us</h1>
     <p>Oscar sleeps all the time.
-   </p> 
+   </p>
    <p> Anna loves sloths. </p>
+  <p> Cintia's dream is to have a Corgi. </p>
   </body>
 </html>
-
