--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -12,9 +12,8 @@
       </ul>
     </nav>
     <h1>About Us</h1>
-    <p>Oscar sleeps all the time.
-   </p> 
+    <p>Oscar sleeps all the time.</p>
    <p> Anna loves sloths. </p>
+   <p>Pablo has fun with synthesizers</p>
   </body>
 </html>
-
