Step4; modified user page html, added about me fetch function

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -39,8 +39,14 @@ limitations under the License.
       <input type="submit" value="Submit">
     </form>
     <hr/>
-
+    
+    <form id="about-me-form" action="/about" method="POST" class="hidden">
+     <textarea name="about-me" placeholder="about me" rows=4 required></textarea>
+     <br/>
+     <input type="submit" value="Submit">
+    </form>
+    
     <div id="message-container">Loading...</div>
-
+    <div id="about-me-container">Loading...</div>
   </body>
 </html>
