Personalized maps page to include pointers that indicate where members of team-16 are based

--- a/src/main/webapp/maps.html
+++ b/src/main/webapp/maps.html
@@ -14,6 +14,7 @@ Last Updated : 03/09/19 -->
 </head>
 <body onload="createMap();">
   <h1>Map Project</h1>
+  <p> Zoom out to see where members of team-16 are currently based!</p>
   <div id="map"></div>
 </body>
 </html>
