--- a/src/main/webapp/maps.html
+++ b/src/main/webapp/maps.html
@@ -10,9 +10,16 @@ Last Updated : 03/09/19 -->
   <title>Map Project</title>
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfEwbIKOYAeqpy7rd0w4DKrz0sNmSbeDg "></script>
    <link rel="stylesheet" href="/css/maps.css">
+   <link rel="stylesheet" href="/css/main.css">
+   <script src="/js/navigation-loader.js"></script>
    <script src="/js/maps.js"></script>
 </head>
 <body onload="createMap();">
+  <nav>
+    <ul id="navigation">
+      <li><a href="/">Home</a></li>
+    </ul>
+  </nav>
   <h1>Map Project</h1>
   <p> Zoom out to see where members of team-16 are currently based!</p>
   <div id="map"></div>
