Make submit for aboutMe work

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -37,7 +37,7 @@ limitations under the License.
     <form id="about-me-form" action="/about" method="POST" class="hidden">
       </br>
       Modify about me info:
-     <textarea id="about-me-input" name="about-me" rows=4 required></textarea>
+     <textarea id="about-me-input" name="about-me" rows=4></textarea>
      <input type="submit" value="Submit">
     </form>
 
