--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -47,9 +47,11 @@ limitations under the License.
       <textarea id="message-input" name="text"></textarea>
       <input type="submit" value="Submit">
     </form>
-  <hr/>
-
-
+      <!-- Add an image to your message:
+      <input type="file" name="image">
+      <br/>
+      <input type="submit" value="Submit">
+    </form> -->
 
     <div id="message-container">Loading...</div>
   </body>
