--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -41,16 +41,17 @@ limitations under the License.
      <input type="submit" value="Submit">
     </form>
 
-    <form id="message-form" class="hidden" action="/messages" method="POST" enctype="multipart/form-data">
-      Enter a new message:
-      <br/>
-      <textarea name="text" id="message-input"></textarea>
-      <br/>
-      Add an image to your message:
-      <input type="file" name="image">
-      <br/>
-      <input type="submit" value="Submit">
-    </form>
+    <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
+    	  Share something with the community:
+    	  <br/>
+    	  <textarea name="text" id="message-input"></textarea>
+    	  <br/>
+    	  Add an image to your message:
+    	  <input type="file" name="image">
+    	  <br/>
+    	  <input type="hidden" value="" name="recipient" id="recipientInput">
+    	  <input type="submit" value="Submit">
+    	</form>
 
     <div id="message-container">Loading...</div>
   </body>
