initial aboutme changes profile pic

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -34,10 +34,15 @@ limitations under the License.
 
     <div id="about-me-container">Loading...</div>
 
-    <form id="about-me-form" action="/about" method="POST" class="hidden">
+    <!-- <form id="about-me-form" action="/about" method="POST" class="hidden"> -->
+    <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
       </br>
       Modify about me info:
      <textarea id="about-me-input" name="about-me" rows=4></textarea>
+     <br/>
+     Add profile picture:
+     <input type="file" name="image">
+     <br/>
      <input type="submit" value="Submit">
     </form>
 
