user page changes

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -35,7 +35,7 @@ limitations under the License.
     <div id="about-me-container">Loading...</div>
 
     <!-- <form id="about-me-form" action="/about" method="POST" class="hidden"> -->
-    <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
+    <!-- <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
       </br>
       Modify about me info:
      <textarea id="about-me-input" name="about-me" rows=4></textarea>
@@ -44,10 +44,21 @@ limitations under the License.
      <input type="file" name="image">
      <br/>
      <input type="submit" value="Submit">
+    </form> -->
+
+    <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
+    </br>
+      Modify about me info:
+      <textarea id="about-me-input" name="about-me" rows=4></textarea>
+      <br/>
+      Add an image to your message:
+      <input type="file" name="image">
+      <br/>
+      <input type="submit" value="Submit">
     </form>
 
     <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
-    	  Share something with the community:
+    	  Share something with the communityyyyyyy:
     	  <br/>
     	  <textarea name="text" id="message-input"></textarea>
     	  <br/>
