--- a/src/main/webapp/maps.html
+++ b/src/main/webapp/maps.html
@@ -11,6 +11,8 @@ Last Updated : 03/09/19 -->
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfEwbIKOYAeqpy7rd0w4DKrz0sNmSbeDg "></script>
    <link rel="stylesheet" href="/css/main.css">
    <link rel="stylesheet" href="/css/maps.css">
+   <link rel="stylesheet" href="/css/main.css">
+   <script src="/js/navigation-loader.js"></script>
    <script src="/js/maps.js"></script>
    <script src="/js/navigation-loader.js"></script>
 </head>
