--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -21,6 +21,7 @@ limitations under the License.
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/user-page.css">
+    <script src="/js/navigation-loader.js"></script>
     <script src="/js/user-page-loader.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
   </head>
@@ -31,7 +32,7 @@ limitations under the License.
       </ul>
     </nav>
     <h1 id="page-title">User Page</h1>
-
+    <ul id="languages"></ul>
     <div id="about-me-container">Loading...</div>
 
     <form id="about-me-form" action="/about" method="POST" class="hidden">
