--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -44,7 +44,7 @@ limitations under the License.
 
     <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
     </br>
-      Modify about me infoooooo:
+      Modify about me info:
       <textarea id="about-me-input" name="about-me" rows=4></textarea>
       <br/>
       Add an image to your message:
