--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -34,21 +34,13 @@ limitations under the License.
 
     <div id="about-me-container">Loading...</div>
 
-    <!-- <form id="about-me-form" action="/about" method="POST" class="hidden">
-      </br>
-      Modify about me info:
-     <textarea id="about-me-input" name="about-me" rows=4></textarea>
-     <br/>
-     <input type="submit" value="Submit">
-    </form> -->
-
     <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
     </br>
       Modify about me info:
       <textarea id="about-me-input" name="about-me" rows=4></textarea>
       <br/>
-      Add an image to your message:
-      <input type="file" name="image">
+      Add an image to your profile:
+      <input type="file" name="profile_image">
       <br/>
       <input type="hidden" value="" name="user" id="userInput">
       <input type="submit" value="Submit">
