--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -25,8 +25,8 @@ limitations under the License.
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
       <ul id="navigation">
-        <li><a href="/">Home</a></li>
-	<li><a href=about.html>About</a></li>
+        <li><a href="feed.html">Feed</a></li>
+	      <li><a href="about.html">About</a></li>
       </ul>
     </nav>
     <h1>CodeU Starter Project</h1>
