Feat[index.html]: Add clearfix div to list

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,8 +25,10 @@ limitations under the License.
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
       <ul id="navigation">
-        <li><a href="feed.html">Feed</a></li>
-	      <li><a href="about.html">About</a></li>
+        <div id="container" class="clearfix">
+          <li><a href="feed.html">Feed</a></li>
+  	      <li><a href="about.html">About</a></li>
+        </div>
       </ul>
     </nav>
     <h1>CodeU Starter Project</h1>
