--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@ limitations under the License.
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
       <ul id="navigation">
-        <div id="container" class="clearfix">
+        <div id="navigation-container" class="clearfix">
           <li><a href="feed.html">Feed</a></li>
   	      <li><a href="about.html">About</a></li>
         </div>
