--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,7 @@ limitations under the License.
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/navigation-loader.js"></script>
   </head>
-  <body onload="addLoginOrLogoutLinkToNavigation();">
+  <body>
     <nav>
       <ul id="navigation">
         <div id="navigation-container" class="clearfix">
@@ -39,4 +39,7 @@ limitations under the License.
     You could start by modifying this page to tell the world more about your team.</p>
    </p>
   </body>
+  <script>
+    addLoginOrLogoutLinkToNavigation()
+  </script>
 </html>
