--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -3,12 +3,19 @@
 <head>
 <title>Message Feed</title>
 <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/user-page.css">
-
+<script src="/js/navigation-loader.js"></script>
 <script src="/js/feed-loader.js"></script>
 </head>
 <body onload="buildUI()">
- <div id="content">
+  <nav>
+    <ul id="navigation">
+      <div id="navigation-container" class="clearfix">
+        <li class="active"><a href="feed.html">Feed</a></li>
+        <li><a href="about.html">About</a></li>
+      </div>
+    </ul>
+  </nav>
+  <div id="content">
   <h1>Message Feed</h1>
   <hr/>
   <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
@@ -23,6 +30,9 @@
   </form>
 
   <div id="message-container">Loading...</div>
- </div>
+  </div>
 </body>
+  <script>
+    addLoginOrLogoutLinkToNavigation()
+  </script>
 </html>
