--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Message Feed</title>
+<title>Feed</title>
 <link rel="stylesheet" href="/css/main.css">
 <script src="/js/navigation-loader.js"></script>
 <script src="/js/feed-loader.js"></script>
