Chore[feed]: Change feed display name

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -3,6 +3,7 @@
 <head>
 <title>Feed</title>
 <link rel="stylesheet" href="/css/post.css">
+<link rel="stylesheet" href="/css/main.css">
 <script src="/js/navigation-loader.js"></script>
 <script src="/js/feed-loader.js"></script>
 </head>
