--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>CodeU 2019 Starter Project</title>
     <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/navigation-loader.js"></script>
   </head>
   <body>
     <nav>
       <ul id="navigation">
-        <li><a href="/">Home</a></li>
+        <div id="navigation-container" class="clearfix">
+          <li><a href="feed.html">Feed</a></li>
+          <li class="active"><a href="about.html">About</a></li>
+        </div>
       </ul>
     </nav>
     <h1>About Us</h1>
@@ -17,4 +21,7 @@
     <p>Pablo has fun with synthesizers.</p>
     <p>Cintia's dream is to have a Corgi.</p>
   </body>
+  <script>
+    addLoginOrLogoutLinkToNavigation()
+  </script>
 </html>
