--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -16,7 +16,7 @@
     </ul>
   </nav>
   <div id="content">
-  <h1>Message Feed</h1>
+  <h1>Feed</h1>
   <hr/>
   <div id="message-container">Loading...</div>
   </div>
