Chore[feed]: Modify feed title

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -16,7 +16,7 @@
     </ul>
   </nav>
   <div id="content">
-  <h1>Message Feed</h1>
+  <h1>Feed</h1>
   <hr/>
   <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
 	  Share something with the community:
