--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/css/main.css">
 <script src="/js/navigation-loader.js"></script>
 <script src="/js/feed-loader.js"></script>
+<script src="/js/post.js"></script>
 </head>
 <body onload="buildUI()">
   <nav>
