--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <title>Feed</title>
-<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/post.css">
 <script src="/js/navigation-loader.js"></script>
 <script src="/js/feed-loader.js"></script>
-<script src="/js/post.js"></script>
 </head>
 <body onload="buildUI()">
   <nav>
