--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -11,6 +11,17 @@
  <div id="content">
   <h1>Message Feed</h1>
   <hr/>
+  <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
+	  Share something with the community:
+	  <br/>
+	  <textarea name="text" id="message-input"></textarea>
+	  <br/>
+	  Add an image to your message:
+	  <input type="file" name="image">
+	  <br/>
+  	  <input type="submit" value="Submit">
+  </form>
+
   <div id="message-container">Loading...</div>
  </div>
 </body>
