--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/css/user-page.css">
 
 <script src="/js/feed-loader.js"></script>
+<script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
 </head>
 <body onload="buildUI()">
  <div id="content">
