Add styling (navbar and feed)
* Add styling to user page (#48)

* Add styles to user-page css

* Assign styles to html divs in user-page

* Make generated message divs styled in user page

* Feat[navbar]: Modify options on navbar

* Style[main css]: remove comments

* Feat[main css]: Style text on navbar

* Feat[main css]: Style navbar

* Feat[main css]: Style elems in navbar

* Feat[main css]: Add depth to navbar elems

* Fix[main css]: Add clearfix for navbar color

* Feat[index.html]: Add clearfix div to list

* Fix[navbar]: Make elems added through js work

* Style[index]: load navbar from script

* Feat[feed]: Add navbar to feed

* Chore[feed]: Change feed display name

* Feat[about]: Add navbar

* Chore[feed]: Modify feed title

* Feat[profile]: Add navbar

* testing

* Feat[main css]: Change background color to gray

* Feat[post css]: Add css for posts

* added part of post html to feed js

* Feat[main css]: Add depth to navbar elems

* Fix[navbar]: Make elems added through js work

* Chore[feed]: Change feed display name

* testing

* added part of post html to feed js

* fixed some style and added about me pictures to posts

--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -22,11 +22,13 @@ limitations under the License.
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/navigation-loader.js"></script>
   </head>
-  <body onload="addLoginOrLogoutLinkToNavigation();">
+  <body>
     <nav>
       <ul id="navigation">
-        <li><a href="/">Home</a></li>
-	<li><a href=about.html>About</a></li>
+        <div id="navigation-container" class="clearfix">
+          <li><a href="feed.html">Feed</a></li>
+  	      <li><a href="about.html">About</a></li>
+        </div>
       </ul>
     </nav>
     <h1>CodeU Starter Project</h1>
@@ -37,4 +39,7 @@ limitations under the License.
     You could start by modifying this page to tell the world more about your team.</p>
    </p>
   </body>
+  <script>
+    addLoginOrLogoutLinkToNavigation()
+  </script>
 </html>
