--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -28,24 +28,32 @@ limitations under the License.
   <body onload="buildUI();">
     <nav>
       <ul id="navigation">
-        <li><a href="/">Home</a></li>
+        <div id="navigation-container" class="clearfix">
+          <li><a href="feed.html">Feed</a></li>
+  	      <li><a href="about.html">About</a></li>
+          <li class="navRight"><a href="logout">Logout</a></li>
+          <li class="navRight active"><a href="user-page.html">Profile</a></li>
+        </div>
       </ul>
     </nav>
-    <h1 id="page-title">User Page</h1>
+    <div class="padded rounded panel centered">
+      <h1 id="page-title">User Page</h1>
+    </div>
     <ul id="languages"></ul>
     <div id="about-me-container">Loading...</div>
-
-    <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
-    </br>
-      Modify about me info:
-      <textarea id="about-me-input" name="about-me" rows=4></textarea>
-      <br/>
-      Add an image to your profile:
-      <input type="file" name="profile_image">
-      <br/>
-      <input type="hidden" value="" name="user" id="userInput">
-      <input type="submit" value="Submit">
-    </form>
+    <div class="padded rounded panel">
+      <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
+        </br>
+        Modify about me info:
+        <textarea id="about-me-input" name="about-me" rows=4></textarea>
+        <br/>
+        Add an image to your profile:
+        <input type="file" name="profile_image">
+        <br/>
+        <input type="hidden" value="" name="user" id="userInput">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
 
     <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
     	  Share something with the community:
