--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -18,7 +18,7 @@ limitations under the License.
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CodeU 2019 Starter Project</title>
+    <title>Dogbook</title>
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/navigation-loader.js"></script>
   </head>
@@ -31,13 +31,8 @@ limitations under the License.
         </div>
       </ul>
     </nav>
-    <h1>CodeU Starter Project</h1>
-    <p>This is the CodeU starter project. Click the links above to login and visit your page.
-    You can post messages on your page, and you can visit other user pages if you have
-    their URL.</p>
-    <p>This is your code now! Feel free to make changes, and don't be afraid to get creative!
-    You could start by modifying this page to tell the world more about your team.</p>
-   </p>
+    <h1 class="pageTitle">Dogbook</h1>
+    <p class="pageDescription">A social network for sharing doggy goodness</p>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
