--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -33,6 +33,7 @@ limitations under the License.
     </nav>
     <h1 class="pageTitle">Dogbook</h1>
     <p class="pageDescription">A social network for sharing doggy goodness</p>
+    <p class="pageDescriptionSmall">Learn more about our project page on the About page</p>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
