--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -15,11 +15,22 @@
         </div>
       </ul>
     </nav>
-    <h1>About Us</h1>
-    <p>Oscar sleeps all the time.</p>
-    <p>Anna loves sloths.</p>
-    <p>Pablo has fun with synthesizers.</p>
-    <p>Cintia's dream is to have a Corgi.</p>
+    <h1>We Want It We Git It!</h1>
+    <div>
+      <div>
+        <img height="600px" width = "600px" src="https://i.imgur.com/3zMuSzJ.jpg"</img>
+      </div>
+      <div>
+        <h2>Oscar Garcia</h2>
+        <p>Sleeps all the time</p>
+        <h2>Pablo Andrade</h2>
+        <p>Has fun with synthesizers</p>
+        <h2>Cintia Araujo</h2>
+        <p>Her dream is to have a Corgi</p>
+        <h2>Anna Kawakami</h2>
+        <p>Loves sloths</p>
+      </div>
+    </div>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
