Feat[About]: Add information about page features

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -31,6 +31,16 @@
         <p>Loves sloths</p>
       </div>
     </div>
+    <h1>Site features:</h1>
+      <h2>Posts</h2>
+        <ul>
+          <li>Style text with markdown</li>
+          <li>Style text with rich text editor</li>
+          <li>Add images uploading to datastore (submit button)</li>
+          <li>Add images with link to page</li>
+        </ul>
+      <h2>Maps</h2>
+      <h2>Mentions</h2>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
