Feat[About]: Add information about Maps and Mentions

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -40,7 +40,13 @@
           <li>Add images with link to page</li>
         </ul>
       <h2>Maps</h2>
+        <ul>
+          <li>Tell your friends where you are at!</li>
+        </ul>
       <h2>Mentions</h2>
+        <ul>
+          <li>Post a friend in feed with format "@username@something.x"</li>
+        </ul>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
