Added maps to navbar

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -14,6 +14,7 @@
       <div id="navigation-container" class="clearfix">
         <li class="active"><a href="feed.html">Feed</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="sfmaps.html">Map</a></li>
       </div>
     </ul>
   </nav>
