--- a/src/main/webapp/sfmaps.html
+++ b/src/main/webapp/sfmaps.html
@@ -10,11 +10,16 @@
 <body onload="createMap();">
   <nav>
     <ul id="navigation">
-      <li><a href="/">Maps</a></li>
+      <div id="navigation-container" class="clearfix">
+        <li><a href="feed.html">Feed</a></li>
+        <li><a href="about.html">About</a></li>
+        <li class="active"><a href="sfmaps.html">Map</a></li>
+      </div>
     </ul>
   </nav>
-  <h1>Map Project</h1>
-  <p> A San Francisco Map of Dog Parks, Beaches, and Trails</p>
+  <h1>San Francisco Map for Pups</h1>
+  <p>  Includes dog parks, beaches, and trails. </p>
+  <p1> Click on the markers to see the names to these pawfect pup destinations!</p1>
   <div id="map"></div>
 </body>
 </html>
