--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -12,6 +12,7 @@
         <div id="navigation-container" class="clearfix">
           <li><a href="feed.html">Feed</a></li>
           <li class="active"><a href="about.html">About</a></li>
+          <li><a href="sfmaps.html">Map</a></li>
         </div>
       </ul>
     </nav>
