Small changes for Gaurav about me and maps for landing.html

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -30,6 +30,11 @@
         <p>Her dream is to have a Corgi</p>
         <h2>Anna Kawakami</h2>
         <p>Loves sloths</p>
+        <h2>Gaurav Mishra</h2>
+        <p>Gaurav is our amazing PA!!!</p>
+      </div>
+      <div>
+        <img src="Pics/IMG-2867.JPG" alt="Team-16">
       </div>
     </div>
     <h1>Site features:</h1>
