--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -27,7 +27,8 @@ limitations under the License.
       <ul id="navigation">
         <div id="navigation-container" class="clearfix">
           <li><a href="feed.html">Feed</a></li>
-  	      <li><a href="about.html">About</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="sfmaps.html">Map</a></li>
         </div>
       </ul>
     </nav>
