Feat[post input]: Fix width to be 50%

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -21,7 +21,7 @@
   <div id="content">
   <h1>Feed</h1>
   <hr/>
-  <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
+  <form id="message-form" class="hidden input" method="POST" enctype="multipart/form-data">
 	  Share something with the community:
 	  <br/>
 	  <textarea name="text" id="message-input"></textarea>
