Feat[feed post]: Change input prompt text

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -22,11 +22,11 @@
   <h1>Feed</h1>
   <hr/>
   <form id="message-form" class="hidden input" method="POST" enctype="multipart/form-data">
-	  Share something with the community:
+	  Share something with the community!
 	  <br/>
 	  <textarea name="text" id="message-input"></textarea>
 	  <br/>
-	  Add an image to your message:
+	  Add an image to your post:
 	  <input type="file" name="image">
 	  <br/>
   	  <input type="submit" value="Submit">
