Improve posts from feed (#85)
* Feat[post]: Fix div management, post size, margins and center

* Feat[post]: Make profile pic always circular

* Feat[post input]: Fix width to be 50%

* Feat[feed post]: Change input prompt text

* Feat[feed]: Add maps button for posts

* Feat[feed]: add css to maps button

* Feat[post]: Change pointer to hand when hover over maps button

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -21,12 +21,12 @@
   <div id="content">
   <h1>Feed</h1>
   <hr/>
-  <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
-	  Share something with the community:
+  <form id="message-form" class="hidden input" method="POST" enctype="multipart/form-data">
+	  Share something with the community!
 	  <br/>
 	  <textarea name="text" id="message-input"></textarea>
 	  <br/>
-	  Add an image to your message:
+	  Add an image to your post:
 	  <input type="file" name="image">
 	  <br/>
   	  <input type="submit" value="Submit">
