Feat[landing]: Add doggy background

--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -32,9 +32,11 @@ limitations under the License.
         </div>
       </ul>
     </nav>
-    <h1 class="pageTitle">Dogbook</h1>
-    <p class="pageDescription">A social network for sharing doggy goodness</p>
-    <p class="pageDescriptionSmall">Learn more about our project page on the About page</p>
+    <div class="doggy-background">
+      <h1 class="pageTitle">Dogbook</h1>
+      <p class="pageDescription">A social network for sharing doggy goodness</p>
+      <p class="pageDescriptionSmall">Learn more about our project page on the About page</p>
+    </div>
   </body>
   <script>
     addLoginOrLogoutLinkToNavigation()
