--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -20,7 +20,7 @@ limitations under the License.
     <title>User Page</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/user-page.css">
+    <link rel="stylesheet" href="/css/post.css">
     <script src="/js/navigation-loader.js"></script>
     <script src="/js/user-page-loader.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
