--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -66,7 +66,8 @@ limitations under the License.
     	  <input type="hidden" value="" name="recipient" id="recipientInput">
     	  <input type="submit" value="Submit">
     	</form>
-
-    <div id="message-container">Loading...</div>
+    <div id="message-container-container" class="profile-posts-container">
+      <div id="message-container">Loading...</div>
+    </div>
   </body>
 </html>
