Chore[user-page.html]: Remove unnecessary classes

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -36,12 +36,12 @@ limitations under the License.
         </div>
       </ul>
     </nav>
-    <div class="padded rounded panel centered">
+    <div>
       <h1 id="page-title">User Page</h1>
     </div>
     <ul id="languages"></ul>
     <div id="about-me-container">Loading...</div>
-    <div class="padded rounded panel">
+    <div>
       <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
         </br>
         Modify about me info:
