--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -41,7 +41,7 @@ limitations under the License.
         <div>
           <h1 id="page-title">User Page</h1>
         </div>
-        <ul id="languages"></ul>
+        <ul id="languages" class="languages"></ul>
         <div id="about-me-container">Loading...</div>
         <div>
           <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
