added home to navbar

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -10,6 +10,7 @@
     <nav>
       <ul id="navigation">
         <div id="navigation-container" class="clearfix">
+          <li><a href="landing.html">Home</a></li>
           <li><a href="feed.html">Feed</a></li>
           <li class="active"><a href="about.html">About</a></li>
           <li><a href="sfmaps.html">Map</a></li>
