--- a/src/main/webapp/landing.html
+++ b/src/main/webapp/landing.html
@@ -26,6 +26,7 @@ limitations under the License.
     <nav>
       <ul id="navigation">
         <div id="navigation-container" class="clearfix">
+          <li class="active"><a href="landing.html">Home</a></li>
           <li><a href="feed.html">Feed</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="sfmaps.html">Map</a></li>
