--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -12,6 +12,7 @@
   <nav>
     <ul id="navigation">
       <div id="navigation-container" class="clearfix">
+        <li><a href="landing.html">Home</a></li>
         <li class="active"><a href="feed.html">Feed</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="sfmaps.html">Map</a></li>
