--- a/src/main/webapp/sfmaps.html
+++ b/src/main/webapp/sfmaps.html
@@ -11,6 +11,7 @@
   <nav>
     <ul id="navigation">
       <div id="navigation-container" class="clearfix">
+        <li><a href="landing.html">Home</a></li>
         <li><a href="feed.html">Feed</a></li>
         <li><a href="about.html">About</a></li>
         <li class="active"><a href="sfmaps.html">Map</a></li>
