--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -20,7 +20,7 @@ limitations under the License.
     <title>User Page</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/user-page.css">
+    <link rel="stylesheet" href="/css/post.css">
     <script src="/js/navigation-loader.js"></script>
     <script src="/js/user-page-loader.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
@@ -36,37 +36,42 @@ limitations under the License.
         </div>
       </ul>
     </nav>
-    <div class="padded rounded panel centered">
-      <h1 id="page-title">User Page</h1>
-    </div>
-    <ul id="languages"></ul>
-    <div id="about-me-container">Loading...</div>
-    <div class="padded rounded panel">
-      <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
-        </br>
-        Modify about me info:
-        <textarea id="about-me-input" name="about-me" rows=4></textarea>
-        <br/>
-        Add an image to your profile:
-        <input type="file" name="profile_image">
-        <br/>
-        <input type="hidden" value="" name="user" id="userInput">
-        <input type="submit" value="Submit">
-      </form>
-    </div>
+    <div class="profile-divider">
+      <div class="user-info">
+        <div>
+          <h1 id="page-title">User Page</h1>
+        </div>
+        <ul id="languages" class="languages"></ul>
+        <div id="about-me-container">Loading...</div>
+        <div>
+          <form id="about-me-form" class="hidden" method="POST" enctype="multipart/form-data">
+            </br>
+            Modify about me info:
+            <textarea id="about-me-input" name="about-me" rows=4></textarea>
+            <br/>
+            Add an image to your profile:
+            <input type="file" name="profile_image">
+            <br/>
+            <input type="hidden" value="" name="user" id="userInput">
+            <input type="submit" value="Submit">
+          </form>
+        </div>
 
-    <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
-    	  Share something with the community:
-    	  <br/>
-    	  <textarea name="text" id="message-input"></textarea>
-    	  <br/>
-    	  Add an image to your message:
-    	  <input type="file" name="image">
-    	  <br/>
-    	  <input type="hidden" value="" name="recipient" id="recipientInput">
-    	  <input type="submit" value="Submit">
-    	</form>
-
-    <div id="message-container">Loading...</div>
+        <form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
+        	  Share something with the community:
+        	  <br/>
+        	  <textarea name="text" id="message-input"></textarea>
+        	  <br/>
+        	  Add an image to your message:
+        	  <input type="file" name="image">
+        	  <br/>
+        	  <input type="hidden" value="" name="recipient" id="recipientInput">
+        	  <input type="submit" value="Submit">
+        </form>
+      </div>
+      <div id="message-container-container" class="profile-posts-container">
+        <div id="message-container">Loading...</div>
+      </div>
+    </div>
   </body>
 </html>
