--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -29,8 +29,10 @@ limitations under the License.
     <nav>
       <ul id="navigation">
         <div id="navigation-container" class="clearfix">
+          <li><a href="landing.html">Home</a></li>
           <li><a href="feed.html">Feed</a></li>
-  	      <li><a href="about.html">About</a></li>
+          <li><a href="sfmaps.html">About</a></li>
+          <li><a href="about.html">Map</a></li>
           <li class="navRight"><a href="logout">Logout</a></li>
           <li class="navRight active"><a href="user-page.html">Profile</a></li>
         </div>
